--- a/temas.css
+++ b/temas.css
@@ -1,7 +1,7 @@
 .contenedor{
-  width:100%;   
-  height: 1400px;
-  background-color: #ccc299c2;
+    width:100%;   
+    height: 1400px;
+    background-color: #ccc299c2;
 
 
 }
@@ -16,10 +16,11 @@
 
 .menu{
 
-  width: 100%;
-  height: 100px;
-  background-color: rgb(253, 252, 250);
-}
+    width: 100%;
+    height: 100px;
+    background-color: rgb(253, 252, 250);
+    display: flex;
+}   
 
 .contenedor2{
 
@@ -48,4 +49,45 @@
     width:20%;
     height: 1200px;
     background-color: rgb(96, 80, 202);
+}
+
+.Sociales{
+
+   width: 100px;
+   height: 98px;
+   background-color: rgb(172, 132, 80);
+   margin: 2px;
+
+}
+
+.Ingles{
+   width:100px;
+   height:98px;
+   background-color: rgb(89, 139, 139);
+   margin: 2px;
+   
+
+}
+
+.Matematicas{
+    width:100px;
+    height:98;
+    background-color: aquamarine;
+    margin: 2px;
+
+}
+
+.Biologia{
+    width:100px;
+    height:98px;
+    background-color: rgb(131, 93, 44);
+    margin: 2px;
+
+}
+
+.Tecnologia{
+    width:100px;
+    height:98px;
+    background-color: rgb(102, 116, 116);
+    margin: 2px;
 }
