--- a/temas.css
+++ b/temas.css
@@ -9,7 +9,7 @@
 .encabezado{
     width:100%;
     height: 200px;
-    background-color: rgb(118, 114, 85);
+    background-color: rgb(162,202,234);
 
     
 }
@@ -18,7 +18,7 @@
 
     width: 100%;
     height: 100px;
-    background-color: rgb(253, 252, 250);
+    background-color: rgb(190,232,251);
     display: flex;
 }   
 
@@ -34,7 +34,7 @@
 
     width:20%;
     height: 1200px;
-    background-color: rgb(68, 73, 140);
+    background-color: rgb(162,202,234);
 
 }
 
@@ -42,24 +42,27 @@
 
     width:60%;
     height: 1200px;
-    background-color: rgb(160, 145, 94);
+    background-color: rgb(234,244,254);
     color: blue;
     font-size: xx-small;
     font-family: Georgia, 'Times New Roman', Times, serif;
+ 
+
+}
 
 
 .derecho{
 
     width:20%;
     height: 1200px;
-    background-color: rgb(96, 80, 202);
+    background-color: rgb(162,202,234);
 }
 
 .Sociales{
 
    width: 100px;
    height: 98px;
-   background-color: rgb(172, 132, 80);
+   background-color: rgb(101, 142, 171);
    margin: 2px;
 
 }
@@ -67,7 +70,7 @@
 .Ingles{
    width:100px;
    height:98px;
-   background-color: rgb(89, 139, 139);
+   background-color: rgb(72, 113, 141);
    margin: 2px;
    
 
@@ -76,7 +79,7 @@
 .Matematicas{
     width:100px;
     height:98;
-    background-color: aquamarine;
+    background-color: rgb(102, 116, 116);
     margin: 2px;
 
 }
@@ -84,14 +87,28 @@
 .Biologia{
     width:100px;
     height:98px;
-    background-color: rgb(131, 93, 44);
+    background-color: rgb(132, 171, 202);
     margin: 2px;
 
 }
 
 .Tecnologia{
+
+
     width:100px;
     height:98px;
-    background-color: rgb(102, 116, 116);
+    background-color: rgb(101, 142, 171);
     margin: 2px;
+    font-size:35px;
+    font-style: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
+
+
+
+
+
+
+
+
 }
