--- a/temas.css
+++ b/temas.css
@@ -33,7 +33,7 @@
 .izquierdo{
 
     width:20%;
-    height: 1200px;
+    height: 3405px;
     background-color: rgb(162,202,234);
 
 }
@@ -41,11 +41,13 @@
 .centro{
 
     width:60%;
-    height: 1200px;
+    height: 3405px;
     background-color: rgb(234,244,254);
     color: blue;
-    font-size: xx-small;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    color: rgb(22, 35, 92);
+    font-family: 'Times New Roman', Times, serif;
+    
  
 
 }
@@ -54,7 +56,7 @@
 .derecho{
 
     width:20%;
-    height: 1200px;
+    height: 3405px;
     background-color: rgb(162,202,234);
 }
 
@@ -72,6 +74,7 @@
    height:98px;
    background-color: rgb(72, 113, 141);
    margin: 2px;
+   
    
 
 }
@@ -99,9 +102,8 @@
     height:98px;
     background-color: rgb(101, 142, 171);
     margin: 2px;
-    font-size:35px;
-    font-style: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    
+    
     
 
 
