--- a/Matematicas.css
+++ b/Matematicas.css
@@ -53,6 +53,24 @@
 
 }
 
+.BiografíadeMatemático{
+
+    width:100px;
+   height:98px;
+   background-color: rgb(72, 113, 141);
+   margin: 2px;
+
+}
+
+
+.Importanciadelaestadística{
+
+    width:100px;
+   height:98px;
+   background-color: rgb(72, 113, 141);
+   margin: 2px;
+}
+
 
 .derecho{
 
