--- a/boltones.css
+++ b/boltones.css
@@ -14,9 +14,7 @@
     
     .botones li a{
     
-    background-color: rgb(5, 247, 247);
-    
-    color: rgb(0, 0, 0);
+    background-color: #51708b;
     
     text-decoration: none;
     
