--- a/temas.css
+++ b/temas.css
@@ -203,13 +203,15 @@
     margin: 2px;
     
     
+
+}
+
+.religion{
+
+    width:100px;
+    height:98px;
+    background-color: rgb(17, 41, 58);
+    margin: 2px;
     
-
-
-
-
-
-
-
 
 }
